--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Learning git</title>
 </head>
 <body>
-    <h1>learning git</h1>
+    <h1>learning git from proCoder</h1>
 </body>
 </html>
